--- a/frontend/src/components/FrontPage/FrontPage.css
+++ b/frontend/src/components/FrontPage/FrontPage.css
@@ -2,14 +2,12 @@
 	width: 1000px;
 	height: 150px;
 	margin-top: 60px;
-	max-width: 100%;
-	max-height: 100%;
 }
 
 .backgroundImage{
 	background-image: url('../../image/ZweiPersonenMachenSport.jpg');
 	width: 100%;
-	height: 100vh;
+	height: 100%;
 	max-width: 100%;
 	max-height: 100%;
 	background-size: cover;
