--- a/frontend/src/components/FrontPage/FrontPage.css
+++ b/frontend/src/components/FrontPage/FrontPage.css
@@ -1,14 +1,14 @@
-.frontEndBtn {
-	width: 1000px;
-	height: 150px;
-	margin-top: 60px;
+:root {
+	--animDur: 0.2s;
 }
 
-.backgroundImage{
-	background-image: url('../../image/ZweiPersonenMachenSport.jpg');
-	width: 100%;
-	height: 100%;
-	max-width: 100%;
-	max-height: 100%;
-	background-size: cover;
+.card {
+	transform: scale(1);
+	transition: var(--animDur);
+}
+
+.card:hover {
+	transform: scale(1.1);
+	transition: var(--animDur);
+	cursor: pointer;
 }
