--- a/frontend/src/components/Cards/ButtonBehavior.css
+++ b/frontend/src/components/Cards/ButtonBehavior.css
@@ -3,12 +3,27 @@
 }
 
 .card.hover-card {
+	overflow: hidden;
+	display: inline-block;
+	transform: scale(1);
+	transition: var(--animDur);
+}
+
+.card.hover-card > img {
 	transform: scale(1);
 	transition: var(--animDur);
 }
 
 .card:hover.hover-card {
+	overflow: hidden;
+	display: inline-block;
 	transform: scale(1.1);
+	transition: var(--animDur);
+	cursor: pointer;
+}
+
+.card:hover.hover-card > img {
+	transform: scale(1.105);
 	transition: var(--animDur);
 	cursor: pointer;
 }
