Frontend: Updated Accordion

--- a/frontend/src/components/Accordion/Accordion.css
+++ b/frontend/src/components/Accordion/Accordion.css
@@ -4,6 +4,7 @@
 
 .accordion:hover, .active {
 	background-color: #ccc;
+	transition: box-shadow var(--animation_duration) ease-in-out;
 }
 
 .accordion_content {
